--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body class="content-index">
+
+    <!-- Cabeçalho -->
     <header class="inicio">
         <div class="cabecalho">
             <img src="./assets/img/ods11.png" alt="" class="img-ods">
@@ -27,8 +29,9 @@
         </div>
     </header>
 
+    <!-- Paragrafos de explicação e conceitos -->
     <section class="container-1 container-conceito">
-        <h2>O que são cidades sustentaveis?</h2>
+        <h2>O que são cidades sustentáveis?</h2>
         <p class="paragrafo conceito-paragrafo1">Cidade sustentável é aquela que adota uma série de práticas inteligentes para a melhoria da qualidade de vida da população, promovendo ao mesmo tempo o desenvolvimento econômico e a preservação do meio ambiente. Ou seja, ao invés de promover um crescimento e consumo desordenado, adotam ações e programas de políticas públicas eficientes que impactam positivamente a sociedade e o meio ambiente.</p>
         <p class="paragrafo conceito-paragrafo2">Cidades e comunidades sustentáveis são aquelas que vão além da simples coleta seletiva de lixo. Cidade sustentável é aquela que preza por melhorias na mobilidade urbana, na educação, na saúde, dentre outras áreas.</p>
     </section>
@@ -38,6 +41,7 @@
         <p class="paragrafo conceito-paragrafo2">Essas melhorias não apenas tornam as cidades mais agradáveis de se viver, mas também as preparam para enfrentar os desafios ambientais e sociais do futuro de maneira mais resiliente e equitativa.</p>
     </section>
 
+    <!-- Espaço dos cards de cidades mais sustentáveis do mundo -->
     <section class="container-1 top-cidades" id="nav-top-cidades">
         <h2>TOP cidades mais sustentáveis do mundo:</h2>
         <div class="cards-cidades">
@@ -92,8 +96,9 @@
         </div>    
     </section>
 
+    <!-- Paragrafo de sustentabilidade no Brasil -->
     <section class="container-1 brasil">
-        <h2>Sustentabilidade no Brasil</h2>
+        <h2>Sustentabilidade no Brasil:</h2>
         <div class="container-brasil">
             <div class="text-brasil">
                 <p class="paragrafo brasil-paragrafo1">A sustentabilidade nas cidades brasileiras é uma necessidade urgente, enfrentando desafios como urbanização desordenada, poluição e falta de infraestrutura. No entanto, o Brasil está avançando, ocupando o quinto lugar no ranking mundial de sustentabilidade, com um número crescente de construções e certificações sustentáveis, principalmente em São Paulo. Curitiba, frequentemente destacada como um exemplo, possui um sistema de transporte público eficiente, o BRT, reduzindo a emissão de poluentes e congestionamentos, com mais de 80% da população utilizando o transporte público, uma das taxas mais altas globalmente.</p>
@@ -116,8 +121,9 @@
         </div>
     </section>
 
+    <!-- Lista de atitudes sustentáveis -->
     <section class="container-1 atitudes" id="nav-atitudes">
-        <h2>Atitudes Sustentáveis</h2>
+        <h2>Atitudes Sustentáveis:</h2>
         <ul class="ul-atitudes">
             <li class="li-atitude">
                 <h4>Coleta de lixo</h4>
@@ -146,14 +152,16 @@
         </ul>
     </section>
 
+    <!-- Espaço que foi inserido o formulário -->
     <section class="formulario container-1" id="nav-form">
         <h2>Formulário</h2>
         <p class="paragrafo">Você acredita que sua cidade é verdadeiramente sustentável? O que você acha que poderia ser melhorado para torná-la ainda mais amiga do meio ambiente e agradável para todos os seus habitantes? Convidamos você a compartilhar suas valiosas opiniões preenchendo o formulário abaixo.</p>
         <a href="./IndexFormulario/indexform.html" target="_blank" class="a-formulario">Clique aqui</a>
     </section>
 
+    <!-- Paragrafo sobre as ODS -->
     <section class="ods container-1">
-        <h2>Objetivos de Desenvolvimento Sustentável (ODS)</h2>
+        <h2>Objetivos de Desenvolvimento Sustentável (ODS):</h2>
         <p class="paragrafo">Os Objetivos de Desenvolvimento Sustentável (ODS) são um apelo universal da Organização das Nações Unidas à ação para acabar com a pobreza, proteger o planeta e assegurar que todas as pessoas tenham paz e prosperidade.</p>
         <p class="paragrafo">Esses 17 objetivos, construídos sobre os sucessos de desenvolvimento do Milênio, também incluem novas áreas tais como a mudança climática, desigualdade econômica, inovação, consumo sustentável, paz e justiça, entre outras prioridades.  Os objetivos são interligados – muitas vezes a chave para o sucesso de um envolverá a abordar questões mais comumente associadas ao outro.</p>
         <figure class="figure-image-ods">
@@ -161,6 +169,7 @@
         </figure>
     </section>
 
+    <!-- Rodapé -->
     <footer>
         <div class="over_footer">
             <div class="about_footer">
