--- a/IndexCidades/indexcidadecopenhagen.html
+++ b/IndexCidades/indexcidadecopenhagen.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../assets/css/style-cidades.css">
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
-<body class="content">
+<body class="content-index">
     <header class="inicio-cidades inicio-cidade-copenhagen" id="a-nav-cidade">
         <div class="cabecalho cabecalho-cidades">
             <a href="../index.html"><img src="../assets/img/ods11.png"  alt="" class="img-ods"></a>
