--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="cards-cidades">
             <div class="cidades oslo">
                 <h4 class="nome-cidade">Oslo</h4>
-                <p class="paragrafo-cidade">Oslo, Noruega, uma referência em sustentabilidade, investimentos em transporte público de qualidade e energia renovável. </p>
+                <p class="paragrafo-cidade">Oslo, Noruega, uma referência em sustentabilidade, investimentos em transporte público de qualidade e energia renovável.</p>
                 <figure class="figure-image-card">
                     <img src="./assets/img/oslo.jpg" alt="foto de oslo" class="image">
                 </figure>
@@ -55,7 +55,7 @@
             </div>
             <div class="cidades estocolmo">
                 <h4 class="nome-cidade">Estocolmo</h4>
-                <p class="paragrafo-cidade">Estocolmo, Suécia, líder em sustentabilidade, com práticas ecológicas e inovação em tecnologia verde</p>
+                <p class="paragrafo-cidade">Estocolmo, Suécia, líder em sustentabilidade, com práticas ecológicas e inovação em tecnologia verde.</p>
                 <figure class="figure-image-card">
                     <img src="./assets/img/estocolmo.jpg" alt="foto de estocolmo" class="image">
                 </figure>
@@ -79,7 +79,7 @@
             </div>
             <div class="cidades berlim">
                 <h4 class="nome-cidade">Berlim</h4>
-                <p class="paragrafo-cidade">Berlim, Alemanha, conhecida por sua sustentabilidade, com artes urbanas sustentáveis e proteção de áreas naturais</p>
+                <p class="paragrafo-cidade">Berlim, Alemanha, conhecida por sua sustentabilidade, com artes urbanas sustentáveis e proteção de áreas naturais.</p>
                 <figure class="figure-image-card">
                     <img src="./assets/img/berlim.jpeg" alt="foto de berlim" class="image">
                 </figure>
@@ -87,7 +87,7 @@
             </div>
             <div class="cidades londres">
                 <h4 class="nome-cidade">Londres</h4>
-                <p class="paragrafo-cidade">Londres, Reino Unido, com práticas sustentáveis, sendo parcerias público-privadas, e planejamento urbano inteligente .</p>
+                <p class="paragrafo-cidade">Londres, Reino Unido, com práticas sustentáveis, sendo parcerias público-privadas, e planejamento urbano inteligente.</p>
                 <figure class="figure-image-card">
                     <img src="./assets/img/londres.jpeg" alt="foto de londres" class="image">
                 </figure>
