--- a/IndexFormulario/indexform.html
+++ b/IndexFormulario/indexform.html
@@ -180,6 +180,6 @@
             <p>Copyright &copy; 2023 JJ Solutions – Todos os direitos reservados</p>
         </div>
     </footer>
-    <script src="../assets/js/script.js"></script>
+    <script src="../assets/script.js"></script>
 </body>
 </html>
